refactor: normalize api response, api endpoints, global exception handler (AppException, ErrorCode).